8章　確認問題

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -10,3 +10,11 @@
 /Swich.class
 /Switch02.class
 /Chapter07.class
+/While01.class
+/DoWhile01.class
+/For01.class
+/For02.class
+/Break01.class
+/Countinue01.class
+/Recursive01.class
+/Chapter08.class
