--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,20 +1,2 @@
-/Chapter02.class
-/Ready02.class
-/Variable01.class
-/Chapter04.class
-/Null01.class
-/Chapter05.class
-/Chapter06.class
-/If01.class
-/If02.class
-/Swich.class
-/Switch02.class
-/Chapter07.class
-/While01.class
-/DoWhile01.class
-/For01.class
-/For02.class
-/Break01.class
-/Countinue01.class
-/Recursive01.class
-/Chapter08.class
+/classMeghod/
+/classMethod/
