--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,8 +1,40 @@
-/classMeghod/
-/classMethod/
-/practice/
-/exception/
+/Break01.class
+/Chapter02.class
+/Chapter04.class
 /capsule/
+/classMethod/
+/exception/
 /extend/
 /polymorphism/
-/resources/
+/Chapter05.class
+/Chapter06.class
+/Chapter07.class
+/Chapter08.class
+/ClassMethod01.class
+/Countinue01.class
+/DoWhile01.class
+/For01.class
+/For02.class
+/Human01.class
+/If01.class
+/If02.class
+/Null01.class
+/Ready02.class
+/Recursive01.class
+/Swich.class
+/Switch02.class
+/Variable01.class
+/While01.class
+/practice/
+/snippet/
+/Capter1.class
+/Chapter1.class
+/Chapter1$Human$HumanLeg.class
+/Chapter1$Human.class
+/Human$HumanLeg.class
+/Human.class
+/Outer.class
+/Constants.class
+/Outer$Inner.class
+/Constants$Cat.class
+/Constants$Octopus.class
